src/objects/JF_1757_Main_Subquery__c.object
<CustomObject>
    <fields>
        <fullName>JF_1757_Parent_Subquery__c</fullName>
        <label>JF_1757_Parent_Subquery</label>
        <referenceTo>JF_1757_Parent_Subquery__c</referenceTo>
        <relationshipLabel>JF_1757_Main_Subqueries</relationshipLabel>
        <relationshipName>JF_1757_Main_Subqueries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MainDate__c</fullName>
        <label>MainDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MainNumber__c</fullName>
        <label>MainNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainText__c</fullName>
        <label>MainText</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>JF_1757_Main_Subquery</label>
    <nameField>
        <label>JF_1757_Main_Subquery</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JF_1757_Main_Subqueries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>